--- a/src/main/resources/templates/Fragments/Admin/footer.html
+++ b/src/main/resources/templates/Fragments/Admin/footer.html
@@ -1,13 +1,13 @@
-<!-- /fragments/admin/footer.html -->
-<footer class="footer">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
-                <p>&copy; 2025 PUCP Private Cloud Orchestrator. Todos los derechos reservados.</p>
-            </div>
-            <div class="col-md-6 text-end">
-                <p>Version 1.0.0</p>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+<footer th:fragment="footer" class="footer">
+    <div class="footer-content">
+        <p>© 2025 PUCP Private Cloud Orchestrator. Todos los derechos reservados.</p>
     </div>
 </footer>
+</body>
+</html>
