--- a/src/main/resources/templates/Fragments/Admin/header.html
+++ b/src/main/resources/templates/Fragments/Admin/header.html
@@ -41,10 +41,11 @@
                         <i class="fas fa-cog"></i>
                         <span>Configuración</span>
                     </a>
-                    <a href="#" class="user-dropdown-item logout-item">
+                    <a href="javascript:void(0)" class="user-dropdown-item logout-item" onclick="document.getElementById('logout-form').submit();">
                         <i class="fas fa-sign-out-alt"></i>
                         <span>Cerrar Sesión</span>
                     </a>
+                    <form id="logout-form" action="/logout" method="post" style="display: none;"></form>
                 </div>
             </div>
         </div>
