--- a/src/main/resources/templates/AuthPages/login.html
+++ b/src/main/resources/templates/AuthPages/login.html
@@ -1011,7 +1011,7 @@
         // Configuración de los entornos
         const environments = {
             development: {
-                apiUrl: 'http://localhost:8095',
+                apiUrl: '',
                 debug: true
             },
             production: {
