--- a/src/main/resources/templates/Fragments/Admin/sidebar.html
+++ b/src/main/resources/templates/Fragments/Admin/sidebar.html
@@ -47,7 +47,7 @@
         </li>
         <li>
             <a th:href="@{/Admin/images}" th:classappend="${activeMenu == 'images' ? 'active' : ''}" data-section="images">
-                <i class="fas fa-images"></i>
+                <i class="fas fa-laptop"></i>   <!-- Server/computer tower icon -->
                 <span>Imágenes</span>
             </a>
         </li>
